--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,11 @@
     <string name="app_name">" DoorAccessControlSystem"</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="paper1_text">引导页一</string>
+    <string name="paper2_text">引导页二</string>
+    <string name="paper3_text">引导页三</string>
+    <string name="paperfinish_text">引导页四</string>
+    <string name="paperfinish_btn">开始使用</string>
+    <string name="paper_ship">跳过>></string>
 
 </resources>
